--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         <body>
             <head>
                 <title></title>
-                <link rel="sylesheet" href="style.css">
+                <link rel="stylesheet" href="style.css">
             </head>
 
             <header>
