--- a/second.html
+++ b/second.html
@@ -2,11 +2,11 @@
         <body>
             <head>
                 <title></title>
-                <link rel="sylesheet" href="second.css">
+                <link rel="stylesheet" href="second.css">
             </head>
 
             <header>
-                <img src=""/>
+               
                                                         
                 <nav>
                 <a href="index.html" class="menu-item">история</a>
